ecs-exec improvements

--- a/docker/remote/Dockerfile
+++ b/docker/remote/Dockerfile
@@ -7,6 +7,13 @@ RUN yum install -y jq which make bash
 
 RUN curl -Ls https://raw.githubusercontent.com/aws-containers/amazon-ecs-exec-checker/main/check-ecs-exec.sh > /usr/local/bin/check-ecs-exec && chmod +x /usr/local/bin/check-ecs-exec
 
+RUN mkdir /app
+WORKDIR /app
+
+#RUN CLUSTER_NAME=`aws ecs list-clusters | jq -r  ".clusterArns[]"`
+#RUN TASK_ID=`aws ecs list-tasks --cluster=$CLUSTER_NAME | jq -r ".taskArns[0]"`
+#RUN echo "check-ecs-exec $CLUSTER_NAME $TASK_ID"
+
 ARG ECS_CLUSTER_NAME
 
 ARG ECS_TASK_ID
@@ -23,6 +30,3 @@ ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
 WORKDIR /usr/local/bin/
 
 ENTRYPOINT [ "/bin/bash", "-c", "exec /usr/local/bin/check-ecs-exec $ECS_CLUSTER_NAME $ECS_TASK_ID\"${@}\"", "--" ]
-
-RUN mkdir /app
-WORKDIR /app
